# SecureSurveillance

./: .gitignore  CMakeLists.txt  README.md  TODO  pyproject.toml
apps/: CMakeLists.txt
apps/core_service/: CMakeLists.txt  main.cpp
apps/core_service/include/: grpc_runner_server.hpp  runner_manager.hpp
apps/core_service/src/: grpc_runner_server.cpp  runner_manager.cpp  telemetry_hub.cpp
apps/eval_chokepoint/: CMakeLists.txt  main.cpp
apps/eval_mot20/: CMakeLists.txt  main.cpp
configs/: default.yaml  dual.yaml  dual_example.yaml  eval_mot20.yaml  eval_privacy.yaml  face_debug.yaml  file.yaml  full_reference.yaml  full_reference.yaml.bp  multi.yaml  rtsp.yaml  test.yaml  webcam.yaml
controller/: requirements.txt
controller/tests/: test_analytics.py  test_controller.py  test_gallery.py
controller/veilsight_controller/: analytics_engine.py  analytics_models.py  api.py  gallery_models.py  gallery_service.py  gallery_store.py  models.py  runner_client.py  settings.py
core/: CMakeLists.txt
core/include/anonymization/: anonymizer.hpp
core/include/common/: config.hpp  replicate.hpp  resize.hpp
core/include/encode/: mjpeg_server.hpp  webrtc_manager.hpp
core/include/face_detector/: face_detector.hpp  face_policy.hpp  scrfd_detector.hpp  yunet_detector.hpp
core/include/identity/: identity_decider.hpp
core/include/inference/: detector.hpp  recognizer.hpp  scrfd_detector.hpp  stream_inference_state.hpp  yunet_detector.hpp
core/include/ingest/: dual_source_factory.hpp  frame_packet.hpp  frame_source.hpp  frame_source_factory.hpp  gst_dual_source.hpp  gst_frame_source.hpp
core/include/person_detector/: person_detector.hpp  uhd_detector.hpp  yolox_detector.hpp
core/include/pipeline/: bounded_queue.hpp  metrics.hpp  runtime.hpp  stream_coordinator.hpp  tasks.hpp  transforms.hpp  types.hpp
core/include/recognizer/: recognizer.hpp
core/include/streaming/: webrtc_publisher.hpp
core/include/tracking/: tracker.hpp
core/src/anonymization/: anonymizer.cpp
core/src/common/: config.cpp  replicate.cpp
core/src/encode/: mjpeg_server.cpp  webrtc_manager.cpp
core/src/face_detector/: face_detector_factory.cpp  face_policy.cpp  scrfd_detector.cpp  yunet_detector.cpp
core/src/identity/: identity_decider.cpp
core/src/inference/: detector_factory.cpp  recognizer.cpp  scrfd_detector.cpp  stream_inference_state.cpp  yunet_detector.cpp
core/src/ingest/: dual_source_factory.cpp  frame_source_factory.cpp  gst_dual_source.cpp  gst_frame_source.cpp
core/src/person_detector/: person_detector_factory.cpp  uhd_detector.cpp  yolox_detector.cpp
core/src/pipeline/: metrics.cpp  runtime.cpp  stream_coordinator.cpp  transforms.cpp
core/src/recognizer/: mobilefacenet_recognizer.cpp  recognizer.cpp
core/src/streaming/: webrtc_publisher.cpp
core/src/tracking/: bytetrack_tracker.cpp  demo_tracker.cpp
docs/: pipeline_architecture.drawio  pipeline_architecture.excalidraw
models/detector/: face_detection_yunet_2023mar.ncnn.param  face_detection_yunet_2023mar.pnnx.onnx  face_detection_yunet_2023mar.pnnx.param  face_detection_yunet_2023mar.pnnxsim.onnx
models/face_detectors/scrfd/10g/: scrfd_10g.ncnn.param  scrfd_10g_opt.ncnn.param
models/face_detectors/scrfd/2g/: scrfd_2g.ncnn.param  scrfd_2g.onnx  scrfd_2g_l.ncnn.param  scrfd_2g_l.onnx  scrfd_2g_l_opt.ncnn.param
models/face_detectors/scrfd/500m/: scrfd_500m.ncnn.param  scrfd_500m.onnx  scrfd_500m_l.ncnn.param
models/face_detectors/yunet/: face_detection_yunet_2023mar.ncnn.param
models/people_detectors/yolox_nano/: bytetrack_nano.ncnn.param
models/people_detectors/yolox_tiny/: bytetrack_tiny.ncnn.param
proto/veilsight/runner/v1/: runner.proto
results/MOT20-train/veilsight_tracker/: pedestrian_summary.txt
results/veilsight_tracker/: pedestrian_detailed.csv
scripts/: run_mot20_eval.py
scripts/identity/: init_mobilefacenet_gallery_db.py
tests/: CMakeLists.txt  config_tests.cpp  face_tests.cpp  pipeline_tests.cpp  recognizer_tests.cpp  tracking_tests.cpp
ui/: app.py
web/src/: App.tsx  styles.css
web/src/analytics/: types.ts
web/src/api/: client.ts
web/src/components/: AnalyticsOverlay.tsx  WebRTCPlayer.tsx
web/tests/: app.test.tsx
